fix layout bug

--- a/docs/src/assets/scss/components/social-icons.scss
+++ b/docs/src/assets/scss/components/social-icons.scss
@@ -7,7 +7,6 @@
         padding: 0;
         margin-left: -1rem;
         margin-inline-start: -1rem;
-        display: inline-flex;
 
         li {
             margin: 0;
